--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Payden's Favorite Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/vodka-sauce.html">Vodka Sauce with Rigatoni</a>
-        <a href="recipes/salmon-rice.html">Salmon Rice</a>
+        <h1>Odin Recipes!</h1>
+        <img src="./images/chef-image.jpg" alt="A Chef Cooking">
+        <ul>
+            <li><a href="recipes/vodka-sauce.html">Vodka Sauce with Rigatoni</a></li>
+            <li><a href="recipes/salmon-rice.html">Salmon Rice</a></li>
+            <li><a href="recipes/beans-and-rice.html">Beans and Rice</a></li>
+        </ul>
+
     </body>
 </html>
