Edit salmon-rice.html Updated title for this page to refer to page name.

--- a/recipes/salmon-rice.html
+++ b/recipes/salmon-rice.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Salmon Rice</title>
     </head>
     <body>
         <h1>Salmon Rice</h1>
         <img src="../images/salmon-rice-picture.jpg" alt="Salmon Rice">
-        <h2>What is Salmon Rice</h2>
+        <h2>What is Salmon Rice?</h2>
         <p>Salmon rice is a dish that typically consists of cooked rice that is combined with flaked or diced salmon, and may also include various vegetables and seasonings. The dish is often seasoned with soy sauce, sake or mirin, and may also include ingredients such as ginger, garlic, onions, and green onions. Some variations may also include additional protein such as scallops, shrimp or other seafood. It is a popular dish in Japan and other Pacific Rim countries and can be served in both casual and formal settings.</p>
         <h2>Ingredients</h2>
         <ul>
@@ -29,7 +29,6 @@
             <li>Add soy, mayo and sriracha; mix well.</li>
             <li>Top with avocado and more sriracha, if you like!</li>
             <li>Serve on it's own or in mini wraps!</li>
-
         </ol>
     </body>
 </html>
